--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16"
   }
 }
